--- a/spay/Beers Page/Xibs/FilterCollectionViewCell.xib
+++ b/spay/Beers Page/Xibs/FilterCollectionViewCell.xib
@@ -1,21 +1,62 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="13142" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14490.70" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+    <device id="retina6_1" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12042"/>
-        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14490.49"/>
+        <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="gTV-IL-0wX" customClass="FilterCollectionViewCell" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
+        <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="FilterCollectionViewCell" id="gTV-IL-0wX" customClass="FilterCollectionViewCell" customModule="spay" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="120" height="45"/>
             <autoresizingMask key="autoresizingMask"/>
             <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
-                <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
-                <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="0.0" colorSpace="custom" customColorSpace="sRGB"/>
+                <rect key="frame" x="0.0" y="0.0" width="120" height="45"/>
+                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                <subviews>
+                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="3Vw-fv-N95">
+                        <rect key="frame" x="0.0" y="0.0" width="120" height="45"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Filter" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="sQX-Cy-OPQ">
+                                <rect key="frame" x="15" y="12" width="90" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                        <color key="backgroundColor" name="BackgroundGrey"/>
+                        <constraints>
+                            <constraint firstAttribute="trailing" secondItem="sQX-Cy-OPQ" secondAttribute="trailing" constant="15" id="UXa-to-AAR"/>
+                            <constraint firstAttribute="bottom" secondItem="sQX-Cy-OPQ" secondAttribute="bottom" constant="12" id="erA-dH-f2N"/>
+                            <constraint firstItem="sQX-Cy-OPQ" firstAttribute="top" secondItem="3Vw-fv-N95" secondAttribute="top" constant="12" id="z7V-Sa-vpI"/>
+                            <constraint firstItem="sQX-Cy-OPQ" firstAttribute="leading" secondItem="3Vw-fv-N95" secondAttribute="leading" constant="15" id="zJR-Sv-8YF"/>
+                        </constraints>
+                    </view>
+                </subviews>
             </view>
-            <viewLayoutGuide key="safeArea" id="ZTg-uK-7eu"/>
+            <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+            <constraints>
+                <constraint firstItem="3Vw-fv-N95" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" id="0Yr-e9-ZZ2"/>
+                <constraint firstAttribute="trailing" secondItem="3Vw-fv-N95" secondAttribute="trailing" id="Dkl-vL-9zx"/>
+                <constraint firstAttribute="bottom" secondItem="3Vw-fv-N95" secondAttribute="bottom" id="XkO-Cx-mUP"/>
+                <constraint firstItem="3Vw-fv-N95" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" id="Xsc-J6-j50"/>
+            </constraints>
+            <size key="customSize" width="146" height="50"/>
+            <connections>
+                <outlet property="content" destination="3Vw-fv-N95" id="BAD-GI-0dY"/>
+                <outlet property="filterLabel" destination="sQX-Cy-OPQ" id="abt-1m-zTg"/>
+            </connections>
+            <point key="canvasLocation" x="-24.637681159420293" y="84.375"/>
         </collectionViewCell>
     </objects>
+    <resources>
+        <namedColor name="BackgroundGrey">
+            <color red="0.098039215686274508" green="0.14901960784313725" blue="0.17254901960784313" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
+    </resources>
 </document>
